fix align on line chart

--- a/src/SCSS/_components.scss
+++ b/src/SCSS/_components.scss
@@ -9,6 +9,7 @@
   display: block;
   box-sizing: border-box;
   z-index: 50;
+  white-space: nowrap;
 
   h4{
     font-family: "gotham_bold";
